feat(lua): Some changes from work and some lua stuff